--- a/index.html
+++ b/index.html
@@ -1,114 +1,105 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>José Natal Rodrigues Bento</title>
-		<meta charset="utf-8">
-		<style type="text/css">
-			img{
-				width: 200px;
-			}
+<html lang="pt-br">
 
-			th {background-color: #dddddd;}
-			 td, th {
-			 	border: 1px solid #dddddd;
-			 	text-align: left;
-			 	padding: 8px;
-			 }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <title>José Natal Rodrigues Bento</title>
 
-		</style>
-	</head>
-	<body>
-		<header>
+</head>
 
-			<h1>José Natal Rodrigues Bento</h1>
+<body>
+    <header class="cabecalho">
+        <nav>
+            <div id="nave">
 
-			<nav>
-				<ul>
-					<li> <a href="https://www.instagram.com/josenatalrb/?r=nametag" alt="Instagram" title="Instagram" target="_blank">Instagram</a></li>
-					<li> <a href="https://github.com/Jose-742" alt="Github" title="Github" target="_blank">Github</a></li>
-					<li> <a href="https://www.linkedin.com/in/jose-natal-rodrigues-bento-4a6041120/" alt="Linkedin" title="Linkedin" target="_blank">Linkedin</a></li>
-					<li> <a href="https://twitter.com/JosNatal17?s=09" alt="Twitter" title="Twitter" target="_blank">Twitter</a></li>
-				</ul>
-			</nav>
+                <ul class="menu">
+                    <li> <a href="index.html" alt="Pagina Principal">Início</a></li>
+                    <li> <a href="grade-curricular.html" alt="Grade Curricular">Grade Curricular</a></li>
+                    <li> <a href="projetos.html" alt="Projetos">Projetos</a></li>
+                    <li> <a href="contato.html" alt="Contato">Contato</a></li>
+                    <li> <a href="#">Redes Sociais</a>
+                        <ul class="drop">
+                            <li> <a href="https://www.instagram.com/josenatalrb/?r=nametag" alt="Instagram"
+                                    title="Instagram" target="_blank"> <img src="imagen/logo/instagram3.png" alt="">
+                                    Instagram</a></li>
+                            <li> <a href="https://github.com/Jose-742" alt="Github" title="Github" target="_blank"><img
+                                        src="imagen/logo/git3.png" alt="">Github</a></li>
+                            <li> <a href="https://www.linkedin.com/in/jose-natal-rodrigues-bento-4a6041120/"
+                                    alt="Linkedin" title="Linkedin" target="_blank"><img src="imagen/logo/linkd4.png"
+                                        alt="">Linkedin</a></li>
+                            <li> <a href="https://twitter.com/JosNatal17?s=09" alt="Twitter" title="Twitter"
+                                    target="_blank"><img src="imagen/logo/twitter3.png" alt="">Twitter</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-			<img src="Imagen/FOTO.jpeg" alt="foto Jose Natal" title="foto Jose Natal">
+    <section id="corpo">
 
-		</header>
+        <section id="postagem1">
+            <h2>Lorem Ipsum</h2>
+            <article>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos,
+                e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e
+                os embaralhou
+                para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao
+                salto para a editoração eletrônica,
+                ermanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou
+                decalques contendo passagens de Lorem Ipsum,
+                e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus
+                PageMaker.</article>
+            <img srcset="imagen/inicial-266w.jpg 360w,
+                     imagen/inicial-800w.jpg 800w,
+                     imagen/inicial.jpg 1500w" sizes="(max-width: 480px) 480px,
+                       (max-width: 800px) 800px,
+                       (max-width: 1500px) 1500px" src="imagen/inicial.jpg" alt="carro">
 
-		<main>
 
-			<section>
-				<header> <h2> Menu de Navegação </h2></header>
-				<nav>
-					<ul>
-						<li> <a href="index.html" alt="Pagina Principal">Início</a></li>
-						<li> <a href="grade-curricular.html" alt="Grade Curricular">Grade Curricular</a></li>
-						<li> <a href="projetos.html" alt="Projetos">Projetos</a></li>
-						<li> <a href="contato.html" alt="Contato">Contato</a></li>
-					</ul>
-				</nav>
-			</section>
+        </section>
+        <hr>
+        <section id="postagem2">
+            <h2>Lorem Ipsum</h2>
+            <article>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos,
+                e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e
+                os embaralhou
+                para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao
+                salto para a editoração eletrônica,
+                ermanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou
+                decalques contendo passagens de Lorem Ipsum,
+                e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus
+                PageMaker.</article>
+            <img srcset="imagen/segunda-266w.jpg 360w,
+                         imagen/segunda-800w.jpg 800w, 
+                         imagen/segunda.jpg 1500w" sizes="(max-width: 480px) 480px,
+                        (max-width: 800px) 800px,
+                        (max-width: 1500px) 1500px" src="imagen/segunda.jpg" alt="carro 2">
 
-			<section>
-				<header><h2>Projects Dashboard</h2></header>
-				<table>
-					<tr>
-						<th>Backlog</th>
-						<th>Next Up</th>
-						<th>In Progress</th>
-						<th>Standby</th>
-						<th>Completed</th>
-					</tr>
-					<tr>
-						<td>
-							<ul>
-								<li>Programação Orienta a objetos</li>
-								<li>Programação para Banco de dados</li>
-								<li>CSS e JavaScript</li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-								<li>Introdução à Conectividade</li>
-								<li>Programação para Web I</li>
-								<li>Programação para Banco de Dados</li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-								<li>Programação básica para web</li>
-								<li>Programação Orientada a objetos</li>
-								<li>Introdução a Programação</li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-								<li>Cursos Webs</li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-								<li>Informática Instrumental</li>
-								<li>Introdução a Computação</li>
-								<li>Inglês Técnico</li>
-							</ul>
-						</td>
-					</tr>
-				</table>
-			</section>
-			<hr>
-		</main>
+        </section>
+        <hr>
 
-		<footer>
-			<section>
-				<header><h2>About me</h2></header>
+    </section>
+    <footer>
+        <section>
+            <header>
+                <h2>About me</h2>
+            </header>
 
-				<p>Aluno do Instituto Federal Tocantins <em>Campus</em> Palmas - TO.</p>
+            <p>Aluno do Instituto Federal Tocantins <em>Campus</em> Palmas - TO.</p>
 
-				<address>
-					 <a href="josenatalrb@gmail.com" alt="email-josenatalrb@gmail.com" title="email-josenatalrb@gmail.com">josenatalrb@gmail.com</a>	
-				</address>
-			</section>
-		</footer>
-	</body>
+            <address>
+                <a href="josenatalrb@gmail.com" alt="email-josenatalrb@gmail.com"
+                    title="email-josenatalrb@gmail.com">josenatalrb@gmail.com</a>
+            </address>
+        </section>
+    </footer>
+
+
+
+
+</body>
+
 </html>
